--- a/app/stylesheets/mobile.scss
+++ b/app/stylesheets/mobile.scss
@@ -15,8 +15,9 @@
       font-family: arial;
       background:#EEE;
       text-align:left;
-      padding:0 ;
+      padding:1em ;
       margin:0;
+      line-height:1.5em;
     }
     .user-comment{  
       font-size:.8rem;
