--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -17,6 +17,13 @@
     <%= javascript_include_tag 'vendor/jquery', 'vendor/fastclick', 'vendor/jquery.pjax' %>
   </head>
   <body>
+<% if false %>
+        <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in") }.join.html_safe %>
+<% end %>
+
+        <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name}") }.join.html_safe %>
+
+
   <%#mast head image  %>
   <% if false %>
     style sheet is app/stylesheets/application
@@ -46,6 +53,7 @@
 <div class="row">
     <div class="small-12 small-centered">
       <div class="main-wrapper center">
+        <%=since.inspect  if logged_in?%>
           <%= yield %>
     </div>
   </div>
