--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -23,7 +23,7 @@
       located in application.scss
     <% end %>
     <br><br>
-      <%=image_tag("four-rocks.png") %>
+      <%=image_tag(image_cycle("circle.png","four-rocks.png", "purple_lotus.png","crane.png")) %>
       </p>
     
   <%end%>
