--- a/admin/views/posts/_form.erb
+++ b/admin/views/posts/_form.erb
@@ -18,7 +18,7 @@
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
   <%= f.label :category, :class => 'control-label' %>
   <div class='controls'>
-    <%= f.text_field :category, :class => 'form-control input-xlarge input-with-feedback' %>
+    <%= f.select :category, options:['food','travel','adventure','spirit','cycling'], :class => 'form-control input-xlarge input-with-feedback' %>
     <span class='help-inline'><%= error ? f.error_message_on(:category) : "Ex: a simple text" %></span>
   </div>
 </fieldset>
