--- a/admin/views/layouts/application.erb
+++ b/admin/views/layouts/application.erb
@@ -16,7 +16,7 @@
     <div class="navbar navbar-fixed-top">
       <div class=navbar-inner>
         <div class=container>
-          <%= link_to 'Jo Goes Green Admin', url(:base, :index), :class => 'navbar-brand', :title => 'Jo Goes Green Admin' %>
+          <%= link_to 'Tuning in', url(:base, :index), :class => 'navbar-brand', :title => 'Tuning in' %>
           <ul class="nav navbar-nav pull-right">
             <li class=navbar-edit-account><%= link_to tag_icon(:user), url(:accounts, :edit, :id => current_account.id), :title => pat(:profile), :class => 'navbar-nav-link' %></li>
             <li class=navbar-logout>
