--- a/admin/views/recipes/_form.erb
+++ b/admin/views/recipes/_form.erb
@@ -16,7 +16,7 @@
 </fieldset>
 <% error = @recipe.errors.include?(:image) %>
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
-  <%= f.label :image, :class => 'control-label' %>
+  <%= f.file_field :image, :class => 'control-label' %>
   <div class='controls'>
     <%= f.text_field :image, :class => 'form-control input-xlarge input-with-feedback' %>
     <span class='help-inline'><%= error ? f.error_message_on(:image) : "Ex: a simple text" %></span>
