added new logo image

--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -9,7 +9,7 @@
 img{ max-width:100%; }
 
 
-body{ background: #000; }
+body{ background: #eee; }
 .main-wrapper{ background:#fff; 
   min-height:10em;
   text-align:center;
