--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="small-12 small-centered">
       <div class="mast-head-wraper center">
-        <%= image_tag("zen.png") %>
+        <%= image_tag("have_your_dessert.svg") %>
     </div>
   </div>
 </div>
