added some styling to admin

--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -9,7 +9,7 @@
 img{ max-width:100%; }
 
 
-body{ background: #eee; }
+body{ background: #fff; }
 .main-wrapper{ background:#fff; 
   min-height:10em;
   text-align:center;
@@ -75,7 +75,7 @@ body{ background: #eee; }
     padding:4px 8px 4px 4px;
   }
   .button{  
-    background:$coral;
+    background:$pink;
   }
   .time-ago-now{  
     background:#eff;
