--- a/admin/views/layouts/application.erb
+++ b/admin/views/layouts/application.erb
@@ -7,7 +7,7 @@
     <![endif]-->
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta name=viewport content='width=device-width,initial-scale=1' />
-    <title><%= @title.present? ? "#{@title} | Tuning in Admin" : "Tuning in Admin" %></title>
+    <title><%= @title.present? ? "#{@title} |  Have Your Dessert Admin" : "Have Your Dessert Admin" %></title>
     <%= favicon_tag "favicon.ico" %>
     <link href='http://fonts.googleapis.com/css?family=Varela' rel=stylesheet />
     <%= stylesheet_link_tag 'bootstrap', 'application' %>
@@ -16,7 +16,7 @@
     <div class="navbar navbar-fixed-top">
       <div class=navbar-inner>
         <div class=container>
-          <%= link_to 'Tuning in', url(:base, :index), :class => 'navbar-brand', :title => 'Tuning in' %>
+          <%= link_to 'Have Your Dessert', url(:base, :index), :class => 'navbar-brand', :title => 'Have Your Dessert' %>
           <ul class="nav navbar-nav pull-right">
             <li class=navbar-edit-account><%= link_to tag_icon(:user), url(:accounts, :edit, :id => current_account.id), :title => pat(:profile), :class => 'navbar-nav-link' %></li>
             <li class=navbar-logout>
