--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
 <div class="small-12 small-centered center archive-image" >
-  <%=link_to image_tag("purple_flower.png"), url('/') %>
+  <%=link_to image_tag("have_your_dessert.svg"), url('/')%>
 </div>
 </div>
 
