--- a/app/views/shared/_user_form.erb
+++ b/app/views/shared/_user_form.erb
@@ -21,4 +21,6 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
   </p>
-  <p class="center"><%= f.submit "Signup", class: "button radius" %></p>
+  <p class="center">
+  <%= f.submit "Signup", class: "button radius" %>
+  </p>
