--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -14,7 +14,6 @@
     <link href='http://fonts.googleapis.com/css?family=Varela' rel=stylesheet />
     <%= stylesheet_link_tag 'application', 'post', 'bases', 'comment', 'mobile'%>
     <%= javascript_include_tag 'vendor/modernizr' %>
-    <%= javascript_include_tag 'vendor/jquery', 'vendor/fastclick', 'vendor/jquery.pjax' %>
   </head>
   <body>
 <% if false %>
@@ -52,6 +51,7 @@
     <div class="small-12 small-centered">
       <div class="main-wrapper center">
         <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in") }.join.html_safe %>
+        <%= logged_in?.inspect %>
 
 
           <%= yield %>
@@ -66,4 +66,6 @@
 </div>
 </div>
   </body>
+
+    <%= javascript_include_tag 'vendor/jquery', 'vendor/fastclick', 'vendor/jquery.pjax' %>
 </html>
