--- a/admin/views/recipes/new.erb
+++ b/admin/views/recipes/new.erb
@@ -3,7 +3,7 @@
   <li class="active"> <%= link_to tag_icon(:plus, pat(:new)), url(:recipes, :new) %></li>
 </ul>
 <div class="tabs-content">
-  <% form_for :recipe, url(:recipes, :create), :class => 'form-horizontal' do |f| %>
+  <% form_for :recipe, url_for(:recipes, :create), html:{  multipart: true}, :class => 'form-horizontal'  do |f| %>
     <%= partial 'recipes/form', :locals => { :f => f } %>
  <% end %>
 </div>
