--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -2,14 +2,21 @@
   <%form_for :user, '/users/create'  do |f| %>
     <%= f.label :email %><br />
     <%= f.text_field :email %>
+    <%= error_message_on @user, :email %>
+    <br>
+    <%= f.label :email_confirmation %><br />
+    <%= f.text_field :email_confirmation %>
+    <%= error_message_on @user, :email_confirmatin %>
     <br>
 
     <%= f.label :password %><br />
     <%= f.password_field :password %>
+    <%= error_message_on @user, :password %>
     <br>
 
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
+    <%= error_message_on @user, :password_confirmation %>
     <p class="centered">
         <%= f.submit "Signup", class: "button radius" %>
     </p>
