--- a/admin/views/recipes/_form.erb
+++ b/admin/views/recipes/_form.erb
@@ -1,11 +1,5 @@
 <% error = @recipe.errors.include?(:post_id) %>
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
-  <%= f.label :post_id, :class => 'control-label' %>
-  <div class='controls'>
-    <%= f.text_field :post_id, :class => 'form-control input-xlarge input-with-feedback', :autofocus => true %>
-    <span class='help-inline'><%= error ? f.error_message_on(:post_id) : "Ex: a simple text" %></span>
-  </div>
-</fieldset>
 <% error = @recipe.errors.include?(:ingredients) %>
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
   <%= f.label :ingredients, :class => 'control-label' %>
@@ -14,6 +8,7 @@
     <span class='help-inline'><%= error ? f.error_message_on(:ingredients) : "Ex: a simple text" %></span>
   </div>
 </fieldset>
+    <%= f.hidden_field :post_id, value: @id %>
 <% error = @recipe.errors.include?(:image) %>
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
   <%= f.file_field :image, :class => 'control-label' %>
