--- a/admin/views/layouts/application.erb
+++ b/admin/views/layouts/application.erb
@@ -44,7 +44,14 @@
         <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in", :bootstrap => true) }.join.html_safe %>
 
   <h1>
-    <%= @page_title || "There is no title for this page"%>
+    <u>
+      <%= @page_title ||= "There is no title for this page"%>
+  </u>
+    </p>
+    <br>
+    <br>
+    
+
 </h1>
         <div class='row'><%= yield %></div>
         <div class='main-wrapper-push'></div>
