--- a/admin/views/steps/_form.erb
+++ b/admin/views/steps/_form.erb
@@ -1,11 +1,3 @@
-<% error = @step.errors.include?(:post_id) %>
-<fieldset class='control-group <%= error ? 'has-error' : ''%>'>
-  <%= f.label :post_id, :class => 'control-label' %>
-  <div class='controls'>
-    <%= f.text_field :post_id, :class => 'form-control input-xlarge input-with-feedback', :autofocus => true %>
-    <span class='help-inline'><%= error ? f.error_message_on(:post_id) : "Ex: a simple text" %></span>
-  </div>
-</fieldset>
 <% error = @step.errors.include?(:step) %>
 <fieldset class='control-group <%= error ? 'has-error' : ''%>'>
   <%= f.label :step, :class => 'control-label' %>
@@ -27,18 +19,10 @@
   <%= f.label :title, :class => 'control-label' %>
   <div class='controls'>
     <%= f.text_field :title, :class => 'form-control input-xlarge input-with-feedback' %>
+    <%= f.hidden_field :recipe_id, value: @id%>
     <span class='help-inline'><%= error ? f.error_message_on(:title) : "Ex: a simple text" %></span>
   </div>
 </fieldset>
-<% error = @step.errors.include?(:recipe_id) %>
-<fieldset class='control-group <%= error ? 'has-error' : ''%>'>
-  <%= f.label :recipe_id, :class => 'control-label' %>
-  <div class='controls'>
-    <%= f.text_field :recipe_id, :class => 'form-control input-xlarge input-with-feedback' %>
-    <span class='help-inline'><%= error ? f.error_message_on(:recipe_id) : "Ex: a simple text" %></span>
-  </div>
-</fieldset>
-
 
 <div class="form-actions">
   <%= f.submit pat(:save), :class => 'btn btn-primary' %>
