addedin recipe show page in app section

--- a/app/views/layouts/_search.erb
+++ b/app/views/layouts/_search.erb
@@ -8,7 +8,7 @@
         <div class="small-2 columns">
           <input type="submit"  value= " " class="search-input button round prefix">
         </div>
-        <div class="small-10 columns">
+        <div class="small-7 small-pull-3 columns">
           <input type="text" name="search" placeholder="search the site... ">
         </div>
       </div>
