--- a/app/views/recipes/show.erb
+++ b/app/views/recipes/show.erb
@@ -1,1 +1,23 @@
-<%= @recipe.inspect %>
+<div class="recipe-container">
+  <div class="recipe-title">
+      <h2>
+        <%= @recipe.title %>
+    </h2>
+  </div>
+  
+  <div class="recipe-image">
+    <%= image_tag(@recipe.image) %>
+  </div>
+  
+  <div class="recipe-ingredients">
+    
+    
+    <h3>
+        Ingredients
+    </h3>
+      
+      
+      <%= simple_format(@recipe.ingredients) %>
+  </div>
+
+</div>
