--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -13,7 +13,7 @@
     <link type="text/css" rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
     <link href='http://fonts.googleapis.com/css?family=Varela' rel=stylesheet />
     <%= stylesheet_link_tag 'application', 'post', 'bases', 'comment', 'mobile', 'recipes'%>
-    <%= javascript_include_tag 'vendor/modernizr' %>
+    <%= javascript_include_tag 'vendor/modernizr', 'jquery', 'jquery-ujs' %>
   </head>
   <body>
 <% if false %>
