improved search view styling

--- a/app/stylesheets/_variables.scss
+++ b/app/stylesheets/_variables.scss
@@ -9,4 +9,7 @@ $archive-link: #187DE2;
 $info-color:#6699FF;
 $pink:#cd0067;
 $blue:#00a2ff;
+$grey-search: #666666;
+$green-search: #009948;
+$search-link-color: #1f65ec;
 
