Working on iphone 6 styling

--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -1,7 +1,9 @@
+<div class="copy-right" style="float:left">
   &copy 2015 tuning-in 
+</div>
   <strong>
 
-
+   &nbsp;
   <%= link_to("about", url_for(:bases, :about)) %> |
   <%= mail_to("hjoanne62@gmail.com","contact",
               { subject:"Contact from tuning-in",
