--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -28,7 +28,7 @@
   <div class="row">
     <div class="small-12 small-centered">
       <div class="mast-head-wraper center">
-        <%= image_tag("have_your_dessert.svg") %>
+        <%= image_tag("haveyourdessert.svg") %>
     </div>
   </div>
 </div>
@@ -49,7 +49,7 @@
 
 <div class="row">
     <div class="small-12 small-centered">
-      <div class="main-wrapper center">
+      <div class="main-wrapper" >
         <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in") }.join.html_safe %>
           <%= yield %>
     </div>
@@ -57,7 +57,7 @@
 </div>
 <div class="row">
   <div class="small-12 footer-menu small-centered">
-    <div class="footer-wrapper center">
+    <div class="footer-wrapper">
         <%=partial 'layouts/footer' %>
 </div>
 </div>
