--- a/app/stylesheets/_mixins.scss
+++ b/app/stylesheets/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin grad($a,$b) {
+  background: -webkit-linear-gradient(left, $a , $b); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, $a,$b); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, $a,$b); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, $a,$b); /* Standard syntax */
+} 
 @mixin title-font{  
   font-family:"Varela";
 }
