--- a/app/stylesheets/bases.scss
+++ b/app/stylesheets/bases.scss
@@ -119,14 +119,16 @@
   min-height:2em;
 }
 .footer-wrapper{  
-  padding:.5em;
   @include border-radius(.5em);
+  @include grad($pink, #ff94c9);
+  text-align: center;
   margin-bottom: 2em;
+  color: #ddd;
 
 }
 
 .footer-menu a{  
-  color:$grey-charcoal;
+  color:#ff94c9;
   font-size:.9rem;
 }
 .footer-menu a:hover{  
@@ -138,4 +140,10 @@ footer-menu a:visited{
 }
 .copyright{  
   font-size:.9rem;
+}
+.about{  
+  text-align: center;
+}
+.copy-right{  
+  float: left;
 }
