--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -1,26 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <meta name=viewport content='width=device-width,initial-scale=1' />
-    <title><%= title(@title) %></title>
-    <%= favicon_tag "favicon.ico" %>
-    <link href='http://fonts.googleapis.com/css?family=Varela' rel=stylesheet />
-    <%= stylesheet_link_tag 'application', 'post', 'bases', 'comment', 'mobile', 'recipes','step', 'search'%>
-
-    <%= javascript_include_tag 'vendor/jquery', 'jquery-ui/jquery-ui','vendor/fastclick', 'vendor/jquery.pjax' %>
-  </head>
-  <body>
-<% if false %>
-        <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in") }.join.html_safe %>
-<% end %>
-
-
+<%=partial 'layouts/header'%>
   <%#mast head image  %>
   <% if false %>
     style sheet is app/stylesheets/application
